@@ -1602,7 +1602,7 @@ struct hw_break_tuple
 /* This is an internal VEC created to store information about *points inserted
    for each thread.  This is used when PowerPC HWDEBUG ptrace interface is
    available.  */
-typedef struct thread_points
+struct thread_points
   {
     /* The TID to which this *point relates.  */
     int tid;
@@ -1613,10 +1613,9 @@ typedef struct thread_points
        size of these vector is MAX_SLOTS_NUMBER.  If the hw_break element of
        the tuple is NULL, then the position in the vector is free.  */
     struct hw_break_tuple *hw_breaks;
-  } *thread_points_p;
-DEF_VEC_P (thread_points_p);
+  };
 
-VEC(thread_points_p) *ppc_threads = NULL;
+static std::vector<thread_points *> ppc_threads;
 
 /* The version of the PowerPC HWDEBUG kernel interface that we will use, if
    available.  */
@@ -1782,14 +1781,11 @@ hwdebug_point_cmp (struct ppc_hw_breakpoint *a, struct ppc_hw_breakpoint *b)
 static struct thread_points *
 hwdebug_find_thread_points_by_tid (int tid, int alloc_new)
 {
-  int i;
-  struct thread_points *t;
-
-  for (i = 0; VEC_iterate (thread_points_p, ppc_threads, i, t); i++)
+  for (thread_points *t : ppc_threads)
     if (t->tid == tid)
       return t;
 
-  t = NULL;
+  thread_points *t = NULL;
 
   /* Do we need to allocate a new point_item
      if the wanted one does not exist?  */
@@ -1798,7 +1794,7 @@ hwdebug_find_thread_points_by_tid (int tid, int alloc_new)
       t = XNEW (struct thread_points);
       t->hw_breaks = XCNEWVEC (struct hw_break_tuple, max_slots_number);
       t->tid = tid;
-      VEC_safe_push (thread_points_p, ppc_threads, t);
+      ppc_threads.push_back (t);
     }
 
   return t;
@@ -2383,11 +2379,11 @@ ppc_linux_nat_target::low_new_thread (struct lwp_info *lp)
       struct thread_points *p;
       struct hw_break_tuple *hw_breaks;
 
-      if (VEC_empty (thread_points_p, ppc_threads))
+      if (ppc_threads.empty ())
 	return;
 
       /* Get a list of breakpoints from any thread.  */
-      p = VEC_last (thread_points_p, ppc_threads);
+      p = ppc_threads.back ();
       hw_breaks = p->hw_breaks;
 
       /* Copy that thread's breakpoints and watchpoints to the new thread.  */
@@ -2413,29 +2409,26 @@ ppc_linux_nat_target::low_new_thread (struct lwp_info *lp)
 static void
 ppc_linux_thread_exit (struct thread_info *tp, int silent)
 {
-  int i;
   int tid = tp->ptid.lwp ();
   struct hw_break_tuple *hw_breaks;
-  struct thread_points *t = NULL, *p;
 
   if (!have_ptrace_hwdebug_interface ())
     return;
 
-  for (i = 0; VEC_iterate (thread_points_p, ppc_threads, i, p); i++)
-    if (p->tid == tid)
-      {
-	t = p;
-	break;
-      }
-
-  if (t == NULL)
+  auto iter = std::find_if (ppc_threads.begin (), ppc_threads.end (),
+			    [] (const thread_points *point)
+			    {
+			      return point->tid == tid;
+			    });
+  if (iter == ppc_threads.end ())
     return;
 
-  VEC_unordered_remove (thread_points_p, ppc_threads, i);
+  struct thread_points *t = *iter;
+  unordered_remove (ppc_threads, iter);
 
   hw_breaks = t->hw_breaks;
 
-  for (i = 0; i < max_slots_number; i++)
+  for (int i = 0; i < max_slots_number; i++)
     if (hw_breaks[i].hw_break)
       xfree (hw_breaks[i].hw_break);
 
